[gd_scene load_steps=3 format=3 uid="uid://f08ln13etnsb"]

[ext_resource type="Script" path="res://nodes/Item/item.gd" id="2_p7680"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mq40j"]
size = Vector2(76, 106)

[node name="item" type="Area2D"]
collision_mask = 2
script = ExtResource("2_p7680")

[node name="item_sprite" type="Sprite2D" parent="."]
scale = Vector2(0.33, 0.33)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_mq40j")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
